Fix footer stretch

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+    height: 100vh;
 }
 
 .header {
@@ -138,4 +139,5 @@ button {
     font-size: 18px;
     justify-content: center;
     margin-top: auto;
+    padding: 10px;
 }
